feat: added simple deployment configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,11 @@ services:
       context: .
       labels:
         - "project=SorteoBack"
-    command: bash -c "python manage.py migrate && 
-             python manage.py import_data_from_csv &&
-             gunicorn --bind 0.0.0.0:8000 SorteoBack.wsgi:application"
+    command: >
+      bash -c "python manage.py migrate --check || python manage.py migrate &&
+      gunicorn --bind 0.0.0.0:8000 SorteoBack.wsgi:application"
+
+
     volumes:
       - .:/app
     ports:
