--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.8
+gunicorn==23.0.0
 inflection==0.5.1
 packaging==24.2
 pillow==11.0.0
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 PyJWT==2.10.0
 pytz==2024.1
 PyYAML==6.0.2
