--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,14 +35,14 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
           
           # Stop and remove old containers
-          docker-compose down --remove-orphans
+          sudo docker-compose down --remove-orphans
           
           # Prune unused images and volumes for this specific project
-          docker image prune -f --filter "label=project=${{ secrets.SERVICE_NAME }}"
-          docker volume ls -q --filter "label=project=${{ secrets.SERVICE_NAME }}" | xargs -r docker volume rm
+          sudo docker image prune -f --filter "label=project=${{ secrets.SERVICE_NAME }}"
+          sudo docker volume ls -q --filter "label=project=${{ secrets.SERVICE_NAME }}" | xargs -r docker volume rm
           
           # Build and start containers
-          docker-compose up -d --build --no-recreate db
-          docker-compose up -d --build web
+          sudo docker-compose up -d --build --no-recreate db
+          sudo docker-compose up -d --build web
           exit
           EOF
